--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@types/react-native-html-to-pdf": "^0.8.1",
     "@types/react-native-table-component": "^1.2.4",
     "@types/react-native-vector-icons": "^6.4.13",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-blob-util": "^0.19.0",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-paper": "^5.10.0",
+    "react-native-pdf": "^6.7.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-reanimated-table": "^0.0.2",
     "react-native-safe-area-context": "^4.7.1",
